@@ -1,0 +1,1 @@
+(define-package "smex" "20151212.1409" "M-x interface with Ido-style fuzzy matching." '((emacs "24")) :url "http://github.com/nonsequitur/smex/" :keywords '("convenience" "usability"))
