@@ -110,6 +110,15 @@
 ;; smart-compile
 (global-set-key [C-f7] 'smart-compile)
 
+;; smex
+(add-hook 'after-init-hook
+          '(lambda ()
+             (when (ignore-errors (smex-initialize))
+               (global-set-key (kbd "M-x") 'smex)
+               (global-set-key (kbd "M-X") 'smex-major-mode-commands)
+               ;; This is your old M-x.
+               (global-set-key (kbd "C-c C-c M-x") 'execute-extended-command))))
+
 ;; undo-tree
 ;; (autoload 'undo-tree-mode "undo-tree" nil t)
 ;; (autoload 'global-undo-tree-mode "undo-tree" nil t)
