@@ -1,3 +1,7 @@
+2016-01-24  Liu Xin  <meteor1113@qq.com>
+
+	* init/init-package.el (after-init-hook): Add pacage smex.
+
 2016-01-23  Liu Xin  <meteor1113@qq.com>
 
 	* init/init-package.el: Add package anzu.
